tests/transpiler/x/cpp/partial_application.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/partial_application.cpp:9:16: error: too few arguments to function ‘int add(int, int)’
    9 | auto add5 = add(5);
      |             ~~~^~~
/workspace/mochi/tests/transpiler/x/cpp/partial_application.cpp:5:5: note: declared here
    5 | int add(int a, int b) {
      |     ^~~
