tests/transpiler/x/cpp/partial_application.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-20 23:05:58 GMT+7
#include <iostream>
#include <string>

int add(int a, int b) {
    return (a + b);
}

auto add5 = add(5);

int main() {
    std::cout << std::boolalpha << add5(3) << std::endl;
    return 0;
}
